--- a/index.html
+++ b/index.html
@@ -6,13 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/styles.css">
   <title>Document</title>
 </head>
 
 <body>
-
+  <div class="container">
+    <h1>Address Book</h1>
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Add a contact:</h2>
+        <form id="new-contact">
+          <div class="form-group">
+            <label for="first name">First name:</label>
+            <input type="text" class="form-control" id="new-first-name">
+          </div>
+          <div class="form-group">
+            <label for="last name">Last name:</label>
+            <input type="text" class="form-control" id="new-last-name">
+          </div>
+          <button type="submit" class="btn">Add</button>
+        </form>
+        <h2>Contacts</h2>
+        <ul id="contacts"></ul>
+      </div>
+    </div>
+  </div>
   <script src="js/jquery-3.1.1.js" charset="utf-8"></script>
   <script src="js/bootstrap.js" charset="utf-8"></script>
   <script src="js/scripts.js" charset="utf-8"></script>
