--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
-  <title>Document</title>
+  <title>Address Book</title>
 </head>
 
 <body>
