--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
         <h2>Contacts</h2>
         <ul id="contacts"></ul>
       </div>
+      <div class="col-md-6">
+        <div id="show-contact">
+          <h2></h2>
+
+          <p>First name:<span class="first-name"></span></p>
+          <p>Last name:<span class="last-name"></span></p>
+        </div>
+      </div>
     </div>
   </div>
   <script src="js/jquery-3.1.1.js" charset="utf-8"></script>
