--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
             <label for="last name">Last name:</label>
             <input type="text" class="form-control" id="new-last-name">
           </div>
+
+          <div id="new-addresses">
+            <div class="new-address">
+              <div class="form-group">
+                <label for="new-street">Street</label>
+                <input type="text" class="form-control" id="new-street">
+              </div>
+              <div class="form-group">
+                <label for="new-city">City</label>
+                <input type="text" class="form-control" id="new-city">
+              </div>
+              <div class="form-group">
+                <label for="new-county">County</label>
+                <input type="text" class="form-control" id="new-county">
+              </div>
+            </div>
+          </div>
+          <button type="button" class="btn btn-primary" id="add-address">Another Address</button>
           <button type="submit" class="btn">Add</button>
         </form>
         <h2>Contacts</h2>
@@ -37,6 +55,10 @@
 
           <p>First name: <span class="first-name"></span></p>
           <p>Last name: <span class="last-name"></span></p>
+          <p>Addresses:</p>
+          <ul id="addresses">
+
+          </ul>
         </div>
       </div>
     </div>
